# rag-microservices

./: Dockerfile  README.md  docker-compose-2.yml  docker-compose.yml  main.py  pyproject.toml
ai/: gen_models.py  retriever.py
alembic/: env.py
alembic/versions/: 60547dc1cfdb_fix_relationship_mismatch.py  63130b993f0e_change_answer_column_to_unicodetext.py  7283f4b6636c_convert_chat_is_active_to_boolean.py  913ec573b6a4_initial_migration.py
api/: api_key.py  chat.py  user.py
core/: api_key_auth.py  config.py  jwt_utils.py
db/: chat_memory.py  db_connection.py
db_models/: models.py
schemas/: chat_schemas.py  user_schema.py
services/: chat_service.py
tests/: db test.py
